# FoodCalorieEstimator

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/eval/: usda_1146.json  usda_4582.json
data/train/: usda_1146.json  usda_4582.json
models/: bert_regression.py
src/data_process/: fetch_data.py  fetch_process_data.py  filter_data.py
src/evaluation/: evaluate_bert_regression.py
src/models/: extract_embeddings.py  finetune_bert_maskedlm.py  finetune_bert_regression.py  search_index.py
src/nlp/: embeddings.py  finetune_bert.py  finetune_bert_maskedlm.py  finetune_bert_regression.py
